OCEPROJECT-3110 - Set default for th and td cells to be vertical-align of top. This fixes an issue in Chrome where table cells were not aligned correctly.

--- a/CancerGov/_src/StyleSheets/_general.scss
+++ b/CancerGov/_src/StyleSheets/_general.scss
@@ -102,6 +102,10 @@ table caption {
 /* end add-on functionality to foundation rows */
 
 /* begin default content table styling */
+td, th {
+	vertical-align: top;
+}
+
 table.table-default {
 	border-collapse: collapse;
 	margin: 15px 0;
